--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-dom": "^18.2.0",
     "react-helmet-async": "^2.0.4",
     "react-router-dom": "^6.23.0",
+    "react-headroom": "^3.2.1",
     "react-toastify": "^9.1.3"
   },
   "devDependencies": {
@@ -33,7 +34,6 @@
     "eslint-plugin-react-refresh": "^0.4.6",
     "postcss": "^8.4.38",
     "react-hot-toast": "^2.4.1",
-    "react-icons": "^4.8.0",
     "rollup-plugin-visualizer": "^5.12.0",
     "tailwindcss": "^3.4.3",
     "terser": "^5.31.0",
