--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-helmet-async": "^2.0.4",
     "react-router-dom": "^6.23.0",
     "react-toastify": "^9.1.3",
+    "typescript": "^5.5.3",
     "viem": "^2.17.3"
   },
   "devDependencies": {
